--- a/estilos.css
+++ b/estilos.css
@@ -144,3 +144,35 @@ footer {
     grid-template-columns: 1fr;
   }
 }
+
+.menu-toggle {
+  display: none;
+  font-size: 28px;
+  color: #00ffea;
+  background-color: #333;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  #main-menu {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+  }
+
+  #main-menu.active {
+    display: flex;
+  }
+
+  #main-menu button {
+    width: 100%;
+    margin: 0;
+    border-top: 1px solid #444;
+  }
+}
