--- a/estilos.css
+++ b/estilos.css
@@ -203,3 +203,21 @@ nav button:hover {
   font-size: 1em;
   max-width: 250px;
 }
+.video-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  aspect-ratio: 16/9;
+  max-width: 100%;
+  margin-top: 20px;
+}
+
+.video-slider iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
