--- a/estilos.css
+++ b/estilos.css
@@ -131,11 +131,14 @@ nav button:hover {
 }
 
 .product img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
+  max-width: 100%;
+  max-height: 140px;
+  height: auto;
+  width: auto;
+  display: block;
+  margin: 0 auto;
 }
+
 
 .product h3 {
   margin-top: 10px;
